# Colony_counting

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: README.md  __init__.py  infer.py
assets/: README.md
data/: README.md
docs/: README.md  evaluation_metrics.md  experiment_summary.md  failure_cases.md  mac_compatibility.md  method_design.md
models/: README.md
scripts/: README.md  analyze_tile_crop_options.py  compare_count_eval_csvs.py  evaluate_circle_mask_filter.py  evaluate_count_mae.py  evaluate_sahi_count_mae.py  evaluate_tiled_count_mae.py  plot_count_eval_csv.py  prepare_tiled_yolo_dataset.py  prepare_yolo_dataset.py  refine_v4_edge_filter_grid.py  refine_v6_overlap30_postprocess.py  search_overlap30_tradeoff.py  sweep_count_thresholds.py  sweep_tiled_count_thresholds.py  visualize_count_results.py
tests/: test_imports.py
