[project]
name = "colony-counting"
version = "0.1.0"
description = "Tiled ONNX inference and evaluation tools for bacterial colony counting."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=1.26,<3",
    "opencv-python>=4.9,<4.12",
    "onnxruntime>=1.18,<2",
    "pillow>=10,<13",
    "pillow-heif>=0.16,<2",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]
training = [
    "matplotlib>=3.8,<4",
    "pandas>=2.1,<3",
    "scikit-learn>=1.4,<2",
    "sahi>=0.11,<0.12",
    "ultralytics>=8.3,<9",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
